# trend-watch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: smoke_test.sh
src/trend_watch/: __init__.py  filter.py  interactive.py  main.py  models.py
src/trend_watch/analyzers/: anomaly.py  koc.py  kol.py  pipeline.py  time_series.py
src/trend_watch/analyzers/entity/: dictionary.py  extractor.py
src/trend_watch/analyzers/sentiment/: llm_batch.py  pn_ratio.py
src/trend_watch/analyzers/topic/: clustering.py  embedding.py  wordcloud.py
src/trend_watch/collector/: collector.py  config.py  evaluator.py  extractor.py
src/trend_watch/config/: settings.py
src/trend_watch/llm/: cache.py  client.py
src/trend_watch/reporter/: charts.py  generator.py
src/trend_watch/reporter/templates/: dashboard.html
src/trend_watch/storage/: storage.py
src/trend_watch/utils/: http.py  logging.py  text.py
