[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_watch"]

[project]
name = "trend-watch"
version = "0.1.0"
description = "Keyword-driven web monitor — crawl any site, filter by keywords, generate HTML report"
requires-python = ">=3.12"
dependencies = [
    # Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP & crawling
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Chinese tokenization
    "jieba>=0.42.1",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # Visualization / reports
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    # LLM (CSS selector generation + sentiment overlay)
    "anthropic>=0.40.0",
    "openai>=1.6.0",
    # ML (topic clustering)
    "scikit-learn>=1.8.0",
]

[project.scripts]
trend-watch = "trend_watch.main:app"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/trend_watch/main.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
